// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Abbr correctly renders a "Abbr" role 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  background-repeat: repeat-x;
  background-position: center bottom;
  background-size: 3px 2px;
  background-image: radial-gradient( circle closest-side, #5D6C74 75%, transparent 25% );
}

.emotion-1:hover {
  background-image: radial-gradient( circle closest-side, currentColor 75%, transparent 25% );
}

.emotion-0 {
  position: relative;
}

<span
    class="emotion-0 emotion-1"
  >
    Display
  </span>
</DocumentFragment>
`;

exports[`File correctly renders a "file" role 1`] = `
<DocumentFragment>
  <code
    class="file docutils literal"
  >
    <span
      class="pre"
    >
      examples/treasury_yield/src/main/resources/yield_historical_in.json
    </span>
  </code>
</DocumentFragment>
`;

exports[`GUI Label correctly renders a "guilabel" role 1`] = `
<DocumentFragment>
  <span
    class="guilabel"
  >
    Yes
  </span>
</DocumentFragment>
`;
